Added description section

--- a/index.html
+++ b/index.html
@@ -3338,6 +3338,203 @@
                         </div>
                     </div>
                 </div>
+                <div class="discounts">
+                    <div class="discounts_title">
+                        Скидки и акции
+                    </div>
+                    <div class="discounts_block">
+                        <img src="img/discounts_block-img.png" alt="">
+                        <img src="img/discounts_block-img.png" alt="">
+                        <img src="img/discounts_block-img.png" alt="">
+                        <img src="img/discounts_block-img.png" alt="">
+                        <img src="img/discounts_block-img.png" alt="">
+                        <img src="img/discounts_block-img.png" alt="">
+                    </div>
+                </div>
+                <div class="product_rating rating">
+                    <div class="rating_title">
+                        Рейтинг товаров
+                    </div>
+                    <div class="rating_desc">
+                        Данные септики либо вообще не нуждаются в подключении к электросети, либо способны нормально функционировать без электричества несколько дней.
+                    </div>
+                    <div class="rating_cards">
+                        <div class="rating__cards-card rating_card">
+                            <div class="rating_card-img">
+                                <img src="img/rating_card-img.png" alt="">
+                            </div>
+                            <div class="rating_card-name">
+                                Евролос БИО
+                            </div>
+                            <div class="rating_card-rate">
+                                4.9
+                                <img src="img/card_rating.svg" alt="">
+                            </div>
+                            <div class="rating_card-price">
+                                Цена от
+                                <span>132 107 руб.</span>
+                            </div>
+                            <div class="rating_card-button">
+                                <button class="button button_green button_order">
+                                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.85807 0.425781C2.96843 0.425781 2.24723 1.14698 2.24723 2.03662V2.03698C1.66815 2.03952 1.35056 2.05952 1.11398 2.2176C0.996724 2.29595 0.896047 2.39662 0.817699 2.51388C0.636719 2.78474 0.636719 3.16179 0.636719 3.9159V9.01681C0.636719 10.0293 0.636719 10.5355 0.951249 10.85C1.26578 11.1646 1.77201 11.1646 2.78447 11.1646H7.07996C8.09242 11.1646 8.59865 11.1646 8.91318 10.85C9.22771 10.5355 9.22771 10.0293 9.22771 9.01681V3.9159C9.22771 3.16179 9.22771 2.78474 9.04673 2.51388C8.96838 2.39662 8.8677 2.29595 8.75045 2.2176C8.5138 2.05947 8.19608 2.0395 7.61665 2.03698V2.03662C7.61665 1.14698 6.89546 0.425781 6.00582 0.425781H3.85807ZM3.85434 2.02929C3.85434 1.73275 4.09474 1.49235 4.39129 1.49235H5.46341C5.75996 1.49235 6.00036 1.73275 6.00036 2.02929C6.00036 2.32584 5.75996 2.56624 5.46341 2.56624H4.39129C4.09474 2.56624 3.85434 2.32584 3.85434 2.02929ZM3.31187 5.24674C3.01532 5.24674 2.77492 5.48714 2.77492 5.78369C2.77492 6.08023 3.01532 6.32063 3.31187 6.32063H6.53349C6.83003 6.32063 7.07043 6.08023 7.07043 5.78369C7.07043 5.48714 6.83003 5.24674 6.53349 5.24674H3.31187ZM3.31187 7.39449C3.01532 7.39449 2.77492 7.63489 2.77492 7.93144C2.77492 8.22799 3.01532 8.46839 3.31187 8.46839H5.45961C5.75616 8.46839 5.99656 8.22799 5.99656 7.93144C5.99656 7.63489 5.75616 7.3945 5.45961 7.3945L3.31187 7.39449Z" fill="white"/>
+                                    </svg>
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="rating__cards-card rating_card">
+                            <div class="rating_card-img">
+                                <img src="img/rating_card-img.png" alt="">
+                            </div>
+                            <div class="rating_card-name">
+                                Евролос БИО
+                            </div>
+                            <div class="rating_card-rate">
+                                4.9
+                                <img src="img/card_rating.svg" alt="">
+                            </div>
+                            <div class="rating_card-price">
+                                Цена от
+                                <span>132 107 руб.</span>
+                            </div>
+                            <div class="rating_card-button">
+                                <button class="button button_green button_order">
+                                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.85807 0.425781C2.96843 0.425781 2.24723 1.14698 2.24723 2.03662V2.03698C1.66815 2.03952 1.35056 2.05952 1.11398 2.2176C0.996724 2.29595 0.896047 2.39662 0.817699 2.51388C0.636719 2.78474 0.636719 3.16179 0.636719 3.9159V9.01681C0.636719 10.0293 0.636719 10.5355 0.951249 10.85C1.26578 11.1646 1.77201 11.1646 2.78447 11.1646H7.07996C8.09242 11.1646 8.59865 11.1646 8.91318 10.85C9.22771 10.5355 9.22771 10.0293 9.22771 9.01681V3.9159C9.22771 3.16179 9.22771 2.78474 9.04673 2.51388C8.96838 2.39662 8.8677 2.29595 8.75045 2.2176C8.5138 2.05947 8.19608 2.0395 7.61665 2.03698V2.03662C7.61665 1.14698 6.89546 0.425781 6.00582 0.425781H3.85807ZM3.85434 2.02929C3.85434 1.73275 4.09474 1.49235 4.39129 1.49235H5.46341C5.75996 1.49235 6.00036 1.73275 6.00036 2.02929C6.00036 2.32584 5.75996 2.56624 5.46341 2.56624H4.39129C4.09474 2.56624 3.85434 2.32584 3.85434 2.02929ZM3.31187 5.24674C3.01532 5.24674 2.77492 5.48714 2.77492 5.78369C2.77492 6.08023 3.01532 6.32063 3.31187 6.32063H6.53349C6.83003 6.32063 7.07043 6.08023 7.07043 5.78369C7.07043 5.48714 6.83003 5.24674 6.53349 5.24674H3.31187ZM3.31187 7.39449C3.01532 7.39449 2.77492 7.63489 2.77492 7.93144C2.77492 8.22799 3.01532 8.46839 3.31187 8.46839H5.45961C5.75616 8.46839 5.99656 8.22799 5.99656 7.93144C5.99656 7.63489 5.75616 7.3945 5.45961 7.3945L3.31187 7.39449Z" fill="white"/>
+                                    </svg>
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="rating__cards-card rating_card">
+                            <div class="rating_card-img">
+                                <img src="img/rating_card-img.png" alt="">
+                            </div>
+                            <div class="rating_card-name">
+                                Евролос БИО
+                            </div>
+                            <div class="rating_card-rate">
+                                4.9
+                                <img src="img/card_rating.svg" alt="">
+                            </div>
+                            <div class="rating_card-price">
+                                Цена от
+                                <span>132 107 руб.</span>
+                            </div>
+                            <div class="rating_card-button">
+                                <button class="button button_green button_order">
+                                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.85807 0.425781C2.96843 0.425781 2.24723 1.14698 2.24723 2.03662V2.03698C1.66815 2.03952 1.35056 2.05952 1.11398 2.2176C0.996724 2.29595 0.896047 2.39662 0.817699 2.51388C0.636719 2.78474 0.636719 3.16179 0.636719 3.9159V9.01681C0.636719 10.0293 0.636719 10.5355 0.951249 10.85C1.26578 11.1646 1.77201 11.1646 2.78447 11.1646H7.07996C8.09242 11.1646 8.59865 11.1646 8.91318 10.85C9.22771 10.5355 9.22771 10.0293 9.22771 9.01681V3.9159C9.22771 3.16179 9.22771 2.78474 9.04673 2.51388C8.96838 2.39662 8.8677 2.29595 8.75045 2.2176C8.5138 2.05947 8.19608 2.0395 7.61665 2.03698V2.03662C7.61665 1.14698 6.89546 0.425781 6.00582 0.425781H3.85807ZM3.85434 2.02929C3.85434 1.73275 4.09474 1.49235 4.39129 1.49235H5.46341C5.75996 1.49235 6.00036 1.73275 6.00036 2.02929C6.00036 2.32584 5.75996 2.56624 5.46341 2.56624H4.39129C4.09474 2.56624 3.85434 2.32584 3.85434 2.02929ZM3.31187 5.24674C3.01532 5.24674 2.77492 5.48714 2.77492 5.78369C2.77492 6.08023 3.01532 6.32063 3.31187 6.32063H6.53349C6.83003 6.32063 7.07043 6.08023 7.07043 5.78369C7.07043 5.48714 6.83003 5.24674 6.53349 5.24674H3.31187ZM3.31187 7.39449C3.01532 7.39449 2.77492 7.63489 2.77492 7.93144C2.77492 8.22799 3.01532 8.46839 3.31187 8.46839H5.45961C5.75616 8.46839 5.99656 8.22799 5.99656 7.93144C5.99656 7.63489 5.75616 7.3945 5.45961 7.3945L3.31187 7.39449Z" fill="white"/>
+                                    </svg>
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="rating__cards-card rating_card">
+                            <div class="rating_card-img">
+                                <img src="img/rating_card-img.png" alt="">
+                            </div>
+                            <div class="rating_card-name">
+                                Евролос БИО
+                            </div>
+                            <div class="rating_card-rate">
+                                4.9
+                                <img src="img/card_rating.svg" alt="">
+                            </div>
+                            <div class="rating_card-price">
+                                Цена от
+                                <span>132 107 руб.</span>
+                            </div>
+                            <div class="rating_card-button">
+                                <button class="button button_green button_order">
+                                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.85807 0.425781C2.96843 0.425781 2.24723 1.14698 2.24723 2.03662V2.03698C1.66815 2.03952 1.35056 2.05952 1.11398 2.2176C0.996724 2.29595 0.896047 2.39662 0.817699 2.51388C0.636719 2.78474 0.636719 3.16179 0.636719 3.9159V9.01681C0.636719 10.0293 0.636719 10.5355 0.951249 10.85C1.26578 11.1646 1.77201 11.1646 2.78447 11.1646H7.07996C8.09242 11.1646 8.59865 11.1646 8.91318 10.85C9.22771 10.5355 9.22771 10.0293 9.22771 9.01681V3.9159C9.22771 3.16179 9.22771 2.78474 9.04673 2.51388C8.96838 2.39662 8.8677 2.29595 8.75045 2.2176C8.5138 2.05947 8.19608 2.0395 7.61665 2.03698V2.03662C7.61665 1.14698 6.89546 0.425781 6.00582 0.425781H3.85807ZM3.85434 2.02929C3.85434 1.73275 4.09474 1.49235 4.39129 1.49235H5.46341C5.75996 1.49235 6.00036 1.73275 6.00036 2.02929C6.00036 2.32584 5.75996 2.56624 5.46341 2.56624H4.39129C4.09474 2.56624 3.85434 2.32584 3.85434 2.02929ZM3.31187 5.24674C3.01532 5.24674 2.77492 5.48714 2.77492 5.78369C2.77492 6.08023 3.01532 6.32063 3.31187 6.32063H6.53349C6.83003 6.32063 7.07043 6.08023 7.07043 5.78369C7.07043 5.48714 6.83003 5.24674 6.53349 5.24674H3.31187ZM3.31187 7.39449C3.01532 7.39449 2.77492 7.63489 2.77492 7.93144C2.77492 8.22799 3.01532 8.46839 3.31187 8.46839H5.45961C5.75616 8.46839 5.99656 8.22799 5.99656 7.93144C5.99656 7.63489 5.75616 7.3945 5.45961 7.3945L3.31187 7.39449Z" fill="white"/>
+                                    </svg>
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="rating__cards-card rating_card">
+                            <div class="rating_card-img">
+                                <img src="img/rating_card-img.png" alt="">
+                            </div>
+                            <div class="rating_card-name">
+                                Евролос БИО
+                            </div>
+                            <div class="rating_card-rate">
+                                4.9
+                                <img src="img/card_rating.svg" alt="">
+                            </div>
+                            <div class="rating_card-price">
+                                Цена от
+                                <span>132 107 руб.</span>
+                            </div>
+                            <div class="rating_card-button">
+                                <button class="button button_green button_order">
+                                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3.85807 0.425781C2.96843 0.425781 2.24723 1.14698 2.24723 2.03662V2.03698C1.66815 2.03952 1.35056 2.05952 1.11398 2.2176C0.996724 2.29595 0.896047 2.39662 0.817699 2.51388C0.636719 2.78474 0.636719 3.16179 0.636719 3.9159V9.01681C0.636719 10.0293 0.636719 10.5355 0.951249 10.85C1.26578 11.1646 1.77201 11.1646 2.78447 11.1646H7.07996C8.09242 11.1646 8.59865 11.1646 8.91318 10.85C9.22771 10.5355 9.22771 10.0293 9.22771 9.01681V3.9159C9.22771 3.16179 9.22771 2.78474 9.04673 2.51388C8.96838 2.39662 8.8677 2.29595 8.75045 2.2176C8.5138 2.05947 8.19608 2.0395 7.61665 2.03698V2.03662C7.61665 1.14698 6.89546 0.425781 6.00582 0.425781H3.85807ZM3.85434 2.02929C3.85434 1.73275 4.09474 1.49235 4.39129 1.49235H5.46341C5.75996 1.49235 6.00036 1.73275 6.00036 2.02929C6.00036 2.32584 5.75996 2.56624 5.46341 2.56624H4.39129C4.09474 2.56624 3.85434 2.32584 3.85434 2.02929ZM3.31187 5.24674C3.01532 5.24674 2.77492 5.48714 2.77492 5.78369C2.77492 6.08023 3.01532 6.32063 3.31187 6.32063H6.53349C6.83003 6.32063 7.07043 6.08023 7.07043 5.78369C7.07043 5.48714 6.83003 5.24674 6.53349 5.24674H3.31187ZM3.31187 7.39449C3.01532 7.39449 2.77492 7.63489 2.77492 7.93144C2.77492 8.22799 3.01532 8.46839 3.31187 8.46839H5.45961C5.75616 8.46839 5.99656 8.22799 5.99656 7.93144C5.99656 7.63489 5.75616 7.3945 5.45961 7.3945L3.31187 7.39449Z" fill="white"/>
+                                    </svg>
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="description">
+                <div class="description_title">
+                    Заголовок текста
+                </div>
+                <div class="description_text-area">
+                    <div class="description_text">
+                        При строительстве частного дома часто возникает проблема сброса сточных вод. Для ее решения можно приобрести септик.
+                        <br>
+                        Септики бывают биологические и химические. Биологические глубоко очищают воды, полностью удаляют опасные примеси. Химические используют химические реактивы для обработки стоков.
+                    </div>
+                    <div class="description_about">
+                        <div class="description_about-title">
+                            Что такое септик
+                        </div>
+                        <div class="description_about-desc">
+                            Это устройство, предназначенноее для очистки стоков. Оно состоит из нескольких основных элементов, включая
+                            <ul>
+                                <li>приемную камеру</li>
+                                <Li>отстойник</Li>
+                                <li>фильтр</li>
+                            </ul>
+                        </div>
+                        <div class="description_about-text">
+                            В приемной камере выделяются тяжелые отходы, которые оседают на дно, а более легкие вещества поднимаются вверх. Затем вода поступает в отстойник, где происходит дополнительное осаждение и разделение на твердые и <span class="green_text">жидкие фракции</span>. После этого жидкая фракция поступает в фильтр, где происходит биологическая очистка. Здесь находятся специальные бактерии, которые разлагают органические вещества. Очищенная жидкость может быть использована для полива растений или сброшена в водоем.
+                        </div>
+                        <div class="description_choose">
+                            <div class="description_choose-title">
+                                Выбор септика для частного дома
+                            </div>
+                            <div class="description_choose-type">
+                                Выберите тип системы:
+                                <ul>
+                                    <li>вертикальный</li>
+                                    <li>горизонтальный септики или аэротанковые системы</li>
+                                    <li>биодекомпозиторы</li>
+                                </ul>
+                            </div>
+                            <div class="description_choose-text">
+                                Учитывайте количество проживающих и расход воды. Станция должна быть способна справиться с объемом стоков, которые будут сбрасываться в него ежедневно. Также необходимо оценить уровень грунтовых вод.
+                                <br>
+                                Обратите внимание на эффективность системы фильтрации и возможности обработки стоков.
+                                <br>
+                                Также стоит учесть простоту и удобство эксплуатации. Проверьте, как легко обслуживать и чистить выбранный септик.
+                                <br>
+                                При строительстве частного дома часто возникает проблема сброса сточных вод. Для ее решения можно приобрести септик.
+                                <br>
+                                Септики бывают биологические и химические. Биологические глубоко очищают воды, полностью удаляют опасные примеси. Химические используют химические реактивы для обработки стоков
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
