--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navigation__menu">
                 <ul class="navigation__list">
                     <li class="navigation__item">
-                        <button class="button sublist__button">
+                        <button class="button navigation__button sublist_button">
                             <span>
                                 Клиентам
                             </span>
@@ -38,7 +38,7 @@
                         </ul>
                     </li>
                     <li class="navigation__item">
-                        <button class="button sublist__button">
+                        <button class="button navigation__button">
                             <span>
                                 Услуги
                             </span>
@@ -49,34 +49,46 @@
                         </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            Скидки и акции
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                Скидки и акции
+                            </a>
+                        </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            Клиентам
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                Клиентам
+                            </a>
+                        </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            Контакты
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                Контакты
+                            </a>
+                        </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            Цены
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                Цены
+                            </a>
+                        </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            Наши работы
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                Наши работы
+                            </a>
+                        </button>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
-                            О компании
-                        </a>
+                        <button class="button navigation__button">
+                            <a href="#" class="navigation__link">
+                                О компании
+                            </a>
+                        </button>
                     </li>
                 </ul>
             </div>
@@ -148,7 +160,74 @@
                 </div>
                 <div class="catalog_block">
                     <div class="catalog_area">
-
+                        <div class="catalog_area-left">
+                            <ul>
+                                <li>
+                                    <button class="button button_option">
+                                        Септики
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.67184 8.57735C5.05934 9.24851 6.02807 9.24851 6.41557 8.57735L10.3389 1.78199C10.7264 1.11083 10.242 0.27188 9.467 0.27188H1.62042C0.845427 0.27188 0.361056 1.11083 0.74855 1.78199L4.67184 8.57735Z" fill="black"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Погреба
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.67184 8.57735C5.05934 9.24851 6.02807 9.24851 6.41557 8.57735L10.3389 1.78199C10.7264 1.11083 10.242 0.27188 9.467 0.27188H1.62042C0.845427 0.27188 0.361056 1.11083 0.74855 1.78199L4.67184 8.57735Z" fill="black"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Водоснабжение
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.67184 8.57735C5.05934 9.24851 6.02807 9.24851 6.41557 8.57735L10.3389 1.78199C10.7264 1.11083 10.242 0.27188 9.467 0.27188H1.62042C0.845427 0.27188 0.361056 1.11083 0.74855 1.78199L4.67184 8.57735Z" fill="black"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Отопление
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.67184 8.57735C5.05934 9.24851 6.02807 9.24851 6.41557 8.57735L10.3389 1.78199C10.7264 1.11083 10.242 0.27188 9.467 0.27188H1.62042C0.845427 0.27188 0.361056 1.11083 0.74855 1.78199L4.67184 8.57735Z" fill="black"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Дренаж
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.67184 8.57735C5.05934 9.24851 6.02807 9.24851 6.41557 8.57735L10.3389 1.78199C10.7264 1.11083 10.242 0.27188 9.467 0.27188H1.62042C0.845427 0.27188 0.361056 1.11083 0.74855 1.78199L4.67184 8.57735Z" fill="black"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="catalog_area-right">
+                            <ul>
+                                <li>
+                                    <button class="button button_option">
+                                        Для частного дома
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Для дачи
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Для сада
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button button_option">
+                                        Для туалета
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="additional_features">
@@ -523,19 +602,23 @@
                 <div class="catalog__bottom">
                     <div class="catalog__card">
                         <div class="card-top">
-                            <svg class="card-heart_icon" width="42" height="42" viewBox="0 0 42 42" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="21.0773" cy="20.7724" r="19.9499" stroke="#707070" stroke-width="1.37586"/>
-                                <path d="M13.1308 22.8206L20.4778 29.7224L20.4778 29.7224C20.7309 29.9601 20.8574 30.079 21.0066 30.1083C21.0738 30.1214 21.1429 30.1214 21.2101 30.1083C21.3593 30.079 21.4858 29.9601 21.7389 29.7224L29.0859 22.8206C31.1531 20.8788 31.4041 17.6832 29.6655 15.4424L29.3386 15.0211C27.2588 12.3404 23.0841 12.79 21.6226 15.852C21.4162 16.2845 20.8005 16.2845 20.5941 15.852C19.1327 12.79 14.9579 12.3404 12.8781 15.0211L12.5512 15.4424C10.8126 17.6832 11.0637 20.8788 13.1308 22.8206Z"
-                                      stroke="#707070" stroke-width="2.11345"/>
-                            </svg>
-                            <svg class="card-graph_icon" width="42" height="42" viewBox="0 0 42 42" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                      d="M26.3906 17.567C26.3906 16.9834 25.9175 16.5103 25.3339 16.5103C24.7503 16.5103 24.2772 16.9834 24.2772 17.567V26.0208C24.2772 26.6044 24.7503 27.0775 25.3339 27.0775C25.9175 27.0775 26.3906 26.6044 26.3906 26.0208V17.567ZM16.879 18.6236C17.4626 18.6236 17.9357 19.0967 17.9357 19.6803L17.9357 26.0207C17.9357 26.6043 17.4626 27.0774 16.879 27.0774C16.2954 27.0774 15.8223 26.6043 15.8223 26.0207L15.8223 19.6803C15.8223 19.0967 16.2954 18.6236 16.879 18.6236ZM21.1065 20.7372C21.6901 20.7372 22.1632 21.2103 22.1632 21.7939V26.0209C22.1632 26.6045 21.6901 27.0776 21.1065 27.0776C20.5228 27.0776 20.0497 26.6045 20.0497 26.0209V21.7939C20.0497 21.2103 20.5228 20.7372 21.1065 20.7372Z"
-                                      fill="#707070"/>
-                                <circle cx="21.0773" cy="20.7055" r="19.9499" stroke="#707070" stroke-width="1.37586"/>
-                            </svg>
+                            <button class="button button_fav">
+                                <svg class="card-heart_icon" width="42" height="42" viewBox="0 0 42 42" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="21.0773" cy="20.7724" r="19.9499" stroke="#707070" stroke-width="1.37586"/>
+                                    <path d="M13.1308 22.8206L20.4778 29.7224L20.4778 29.7224C20.7309 29.9601 20.8574 30.079 21.0066 30.1083C21.0738 30.1214 21.1429 30.1214 21.2101 30.1083C21.3593 30.079 21.4858 29.9601 21.7389 29.7224L29.0859 22.8206C31.1531 20.8788 31.4041 17.6832 29.6655 15.4424L29.3386 15.0211C27.2588 12.3404 23.0841 12.79 21.6226 15.852C21.4162 16.2845 20.8005 16.2845 20.5941 15.852C19.1327 12.79 14.9579 12.3404 12.8781 15.0211L12.5512 15.4424C10.8126 17.6832 11.0637 20.8788 13.1308 22.8206Z"
+                                          stroke="#707070" stroke-width="2.11345"/>
+                                </svg>
+                            </button>
+                            <button class="button button_comp">
+                                <svg class="card-graph_icon" width="42" height="42" viewBox="0 0 42 42" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                          d="M26.3906 17.567C26.3906 16.9834 25.9175 16.5103 25.3339 16.5103C24.7503 16.5103 24.2772 16.9834 24.2772 17.567V26.0208C24.2772 26.6044 24.7503 27.0775 25.3339 27.0775C25.9175 27.0775 26.3906 26.6044 26.3906 26.0208V17.567ZM16.879 18.6236C17.4626 18.6236 17.9357 19.0967 17.9357 19.6803L17.9357 26.0207C17.9357 26.6043 17.4626 27.0774 16.879 27.0774C16.2954 27.0774 15.8223 26.6043 15.8223 26.0207L15.8223 19.6803C15.8223 19.0967 16.2954 18.6236 16.879 18.6236ZM21.1065 20.7372C21.6901 20.7372 22.1632 21.2103 22.1632 21.7939V26.0209C22.1632 26.6045 21.6901 27.0776 21.1065 27.0776C20.5228 27.0776 20.0497 26.6045 20.0497 26.0209V21.7939C20.0497 21.2103 20.5228 20.7372 21.1065 20.7372Z"
+                                          fill="#707070"/>
+                                    <circle cx="21.0773" cy="20.7055" r="19.9499" stroke="#707070" stroke-width="1.37586"/>
+                                </svg>
+                            </button>
                             <img class="card-img" src="img/catalog_card_img.png" alt="">
                         </div>
                         <div class="card-info">
@@ -4021,10 +4104,11 @@
         </div>
     </div>
 </footer>
-<script src="/assets/js/script.js"></script>
+<script src="/assets/js/listToggle.js"></script>
 <script src="/assets/js/quiz.js"></script>
 <script src="assets/js/dropdown_menu.js"></script>
 <script src="assets/js/tab_dropdown.js"></script>
+<script src="assets/js/call.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
