Finalized cart localStorage

--- a/index.html
+++ b/index.html
@@ -1807,7 +1807,7 @@
             <span class="catalog_additional-title">Сопутствующие товары</span>
             <div class="catalog_additional-cards">
                 <div class="catalog__card">
-                    <div data-id="13" class="catalog_additional-card">
+                    <div data-id="13" class="catalog__card-card">
                         <div class="card-top">
                             <img class="card-img" src="img/catalog_card_img.png" alt="">
                             <div class="card_buttons">
@@ -1875,7 +1875,7 @@
                     </div>
                 </div>
                 <div class="catalog__card">
-                    <div data-id="14" class="catalog_additional-card">
+                    <div data-id="14" class="catalog__card-card">
                         <div class="card-top">
                             <img class="card-img" src="img/catalog_card_img.png" alt="">
                             <div class="card_buttons">
@@ -1943,7 +1943,7 @@
                     </div>
                 </div>
                 <div class="catalog__card">
-                    <div data-id="15" class="catalog_additional-card">
+                    <div data-id="15" class="catalog__card-card">
                         <div class="card-top">
                             <img class="card-img" src="img/catalog_card_img.png" alt="">
                             <div class="card_buttons">
@@ -2011,7 +2011,7 @@
                     </div>
                 </div>
                 <div class="catalog__card">
-                    <div data-id="16" class="catalog_additional-card">
+                    <div data-id="16" class="catalog__card-card">
                         <div class="card-top">
                             <img class="card-img" src="img/catalog_card_img.png" alt="">
                             <div class="card_buttons">
@@ -4297,50 +4297,6 @@
                                     Стоимость зависит от толщины
                                 </div>
                             </div>
-
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                        </div>
                     </div>
                 </div>
                 <div class="faq-dropdown__tab tab_dropdown">
@@ -4425,49 +4381,6 @@
                                     Стоимость зависит от толщины
                                 </div>
                             </div>
-
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                                <div class="list__bottom-options">-->
-                            <!--                                    <div class="options-name">-->
-                            <!--                                        Штукатурка стен цементная-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-number">-->
-                            <!--                                        М2-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-price">-->
-                            <!--                                        450-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="options-info">-->
-                            <!--                                        Стоимость зависит от толщины-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
                         </div>
                     </div>
                 </div>
@@ -4637,7 +4550,7 @@
 <script src="assets/js/tab_dropdown.js"></script>
 <script src="assets/js/call.js"></script>
 <script src="assets/js/cart.js"></script>
-<script src="assets/js/cartToggle.js"></script>
+
 <noscript>
     <style>
         /**
