Final mobile ver. commit

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 </svg>
             </button>
             <a href="#">
-                <button class="button button_gray button_social">
+                <button class="button button_social">
                     <img src="img/whatsup_icon.svg" alt="">
                 </button>
             </a>
@@ -329,6 +329,7 @@
         <div class="cart_modal-overlay"></div>
         <div class="cart_modal-area">
             <div class="cart_modal-content">
+                <div class="cart_modal-close"></div>
                 <div class="cart_modal-title">
                     Корзина ваших товаров
                 </div>
