--- a/index.html
+++ b/index.html
@@ -2449,12 +2449,12 @@
                     <div class="form__block">
                         <form action="" method="get" class="form__block">
                             <div class="form__name-input">
-                                <label for="name"></label>
-                                <input placeholder="Ваше имя" type="text" name="name" id="name" required/>
+                                <label for="form_name"></label>
+                                <input placeholder="Ваше имя" type="text" name="name" id="form_name" required/>
                             </div>
                             <div class="form__phone-input">
-                                <label for="phone"></label>
-                                <input placeholder="Ваш телефон" type="text" name="phone" id="phone" required/>
+                                <label for="form_phone"></label>
+                                <input placeholder="Ваш телефон" type="text" name="phone" id="form_phone" required/>
                             </div>
                             <div class="form__button">
                                 <button class="button button_green button_form" type="submit">
@@ -4477,7 +4477,7 @@
                     вещества. Очищенная жидкость может быть использована для полива растений или сброшена в водоем.
                 </div>
             </div>
-
+        </div>
     </section>
     <section>
         <div class="contacts container">
