Minor changes and additions

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="catalog_area-left">
                     <ul>
                         <li>
-                            <button class="button button_option">
+                            <button class="button button_option button_option-1">
                                 Септики
                                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -181,7 +181,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="button button_option">
+                            <button class="button button_option button_option-2">
                                 Погреба
                                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -191,7 +191,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="button button_option">
+                            <button class="button button_option button_option-3">
                                 Водоснабжение
                                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -201,7 +201,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="button button_option">
+                            <button class="button button_option button_option-4">
                                 Отопление
                                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -211,7 +211,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="button button_option">
+                            <button class="button button_option button_option-5">
                                 Дренаж
                                 <svg width="11" height="10" viewBox="0 0 11 10" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -223,7 +223,7 @@
                     </ul>
                 </div>
                 <div class="catalog_area-right">
-                    <ul>
+                    <ul class="catalog_area-list catalog_list-1">
                         <li>
                             <button class="button button_option">
                                 Для частного дома
@@ -245,6 +245,28 @@
                             </button>
                         </li>
                     </ul>
+                    <ul class="catalog_area-list catalog_list-2">
+                        <li>
+                            <button class="button button_option">
+                                1
+                            </button>
+                        </li>
+                        <li>
+                            <button class="button button_option">
+                                2
+                            </button>
+                        </li>
+                        <li>
+                            <button class="button button_option">
+                                3
+                            </button>
+                        </li>
+                        <li>
+                            <button class="button button_option">
+                                4
+                            </button>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -253,13 +275,9 @@
                 <div class="search">
                     <input class="search-area" type="text" name="" placeholder="Поиск">
                     <a class="search-button" href="#">
-                        <svg class="search_icon" width="28" height="28" viewBox="0 0 28 28" fill="currentColor"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <circle fill-rule="nonzero" clip-rule="evenodd"
-                                    cx="12.8346" cy="12.8333" r="8.16667" stroke="#353535" stroke-width="2.33333"/>
-                            <path fill-rule="nonzero" clip-rule="evenodd"
-                                  d="M23.334 23.3333L19.834 19.8333" stroke="#353535" stroke-width="2.33333"
-                                  stroke-linecap="round"/>
+                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="12.8327" cy="12.8334" r="8.16667" stroke="#353535" stroke-width="2.33333"/>
+                            <path d="M23.334 23.3333L19.834 19.8333" stroke="#353535" stroke-width="2.33333" stroke-linecap="round"/>
                         </svg>
                         <span>
                     Поиск
@@ -331,7 +349,7 @@
         <div class="cart_modal-overlay"></div>
         <div class="cart_modal-area">
             <div class="cart_modal-content">
-                <div class="cart_modal-close"></div>
+                <div class="modal-close"></div>
                 <div class="cart_modal-title">
                     Корзина ваших товаров
                 </div>
@@ -356,7 +374,7 @@
         <div class="order_modal-overlay"></div>
         <div class="order_modal-area">
             <div class="order_modal-content">
-                <div class="order_modal-close"></div>
+                <div class="modal-close"></div>
                 <div class="order_modal-title">
                     Быстрое оформление заказа
                 </div>
@@ -381,7 +399,7 @@
         <div class="favorite_modal-overlay"></div>
         <div class="favorite_modal-area">
             <div class="favorite_modal-content">
-                <div class="favorite_modal-close"></div>
+                <div class="modal-close"></div>
                 <div class="favorite_modal-title">
                     Список ваших избранных товаров
                 </div>
@@ -406,7 +424,7 @@
         <div class="compare_modal-overlay"></div>
         <div class="compare_modal-area">
             <div class="compare_modal-content">
-                <div class="compare_modal-close"></div>
+                <div class="modal-close"></div>
                 <div class="compare_modal-title">
                     Список товаров для сравнения
                 </div>
@@ -4515,6 +4533,7 @@
 <!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>-->
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="assets/js/search.js"></script>
+<script src="assets/js/catalog.js"></script>
 <script src="assets/js/btn_block.js"></script>
 <script src="/assets/js/listToggle.js"></script>
 <script src="/assets/js/quiz.js"></script>
